validate qualifiers at compile time